@@ -1,44 +1,0 @@
-.Dd August 11, 2023
-.Dt MIGRATE-OFFPUNK-CACHE 1
-.Os
-.
-.Sh NAME
-.Nm migrate-offpunk-cache
-.Nd migrate offpunk cache to the newest version
-.
-.Sh SYNOPSIS
-.Nm
-.Op Ar CACHE_DIR
-.Nm
-.Fl h | \-help
-.
-.Sh DESCRIPTION
-For each new version of offpunk that requires changes to the cache,
-a migration function is provided.
-All migration functions will be called by this script,
-from the oldest to the newest version.
-.Ss Positional arguments
-.Bl -tag -width Ds -offset indent
-.It CACHE_DIR
-This is the path to the cache.
-The default value will point to $XDG_CACHE_HOME,
-or $HOME/.cache/offpunk if undefined.
-.El
-.Ss Keyword arguments
-.Bl -tag -width Ds -offset indent
-.It Fl h , \-help
-Show a help message and exit
-.El
-.
-.Sh EXIT STATUS
-.Ex -std
-.
-.Sh SEE ALSO
-.Xr ansicat 1 ,
-.Xr netcache 1 ,
-.Xr offpunk 1 ,
-.Xr opnk 1 ,
-.Lk https://sr.ht/~lioploum/offpunk/
-.
-.Sh AUTHORS
-.An Lionel Dricot (Ploum) Aq Mt offpunk2 at ploum.eu
